// Vitest Snapshot v1

exports[`Input > matches snapshot 1`] = `
<div>
  <form
    class="sveltejs-forms"
  >
    <div
      class="field"
    >
       
      <input
        id="email"
        name="email"
        placeholder="Email"
        type="text"
      />
       
    </div>
    <!--&lt;Input&gt;-->
     
    <button
      type="submit"
    >
      Sign in
    </button>
  </form>
  <!--&lt;Form&gt;-->
  <!--&lt;TestApp&gt;-->
</div>
`;

exports[`Input > passes props to input 1`] = `
<div>
  <form
    class="sveltejs-forms"
  >
    <div
      class="field"
    >
       
      <input
        disabled=""
        id="email"
        name="email"
        placeholder="Email"
        type="text"
      />
       
    </div>
    <!--&lt;Input&gt;-->
     
    <button
      type="submit"
    >
      Sign in
    </button>
  </form>
  <!--&lt;Form&gt;-->
  <!--&lt;TestApp&gt;-->
</div>
`;

exports[`Input > renders label 1`] = `
<div>
  <form
    class="sveltejs-forms"
  >
    <div
      class="field"
    >
      <label
        for="email"
      >
        Email
      </label>
       
      <input
        id="email"
        name="email"
        placeholder="Email"
        type="text"
      />
       
    </div>
    <!--&lt;Input&gt;-->
     
    <button
      type="submit"
    >
      Sign in
    </button>
  </form>
  <!--&lt;Form&gt;-->
  <!--&lt;TestApp&gt;-->
</div>
`;

exports[`Input > renders textarea when multiline parameter is set 1`] = `
<div>
  <form
    class="sveltejs-forms"
  >
    <div
      class="field"
    >
       
      <textarea
        id="email"
        name="email"
        placeholder="Email"
      />
       
    </div>
    <!--&lt;Input&gt;-->
     
    <button
      type="submit"
    >
      Sign in
    </button>
  </form>
  <!--&lt;Form&gt;-->
  <!--&lt;TestApp&gt;-->
</div>
`;
